# claude-invest

./: .gitignore  README.md  pyproject.toml  watchlist.json
.claude/: trading-crons.md
.claude-plugin/: plugin.json
.claude-plugin/hooks/: hooks.json
.claude-plugin/skills/review-day/: SKILL.md
.claude-plugin/skills/start-trading/: SKILL.md
.claude-plugin/skills/stop-trading/: SKILL.md
.claude-plugin/skills/strategy/: SKILL.md
.claude-plugin/skills/watchlist/: SKILL.md
dashboard/: package-lock.json  package.json
lessons/: lessons.json  strategy-brief.md
lessons/daily/: 2026-04-21.md  2026-04-22.md  2026-04-30.md  2026-05-01.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-21.md  2026-05-22.md  2026-05-26.md  2026-05-27.md  2026-06-02.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-19.md
src/claude_invest/: __init__.py  main.py
tests/: conftest.py  test_api_server.py  test_capital_split.py  test_config.py  test_core_engine.py  test_core_guardian.py  test_core_integration.py  test_db.py  test_dividends.py  test_earnings.py  test_executor.py  test_graduation.py  test_integration.py  test_integration_learning.py  test_learner.py  test_learning_integration.py  test_notify.py  test_optimizer.py  test_pattern_analyzer.py  test_portfolio.py  test_portfolio_tracker.py  test_risk_manager.py  test_scalp_engine.py  test_scalp_integration.py  test_scanner.py  test_sentiment.py  test_strategy.py  test_strategy_engine.py  test_technicals.py  test_telegram_bot.py  test_trailing_stop.py  test_volatility_scanner.py  test_watchlist.py
(+66 files in other folders)
